--- a/css/style.css
+++ b/css/style.css
@@ -15,23 +15,28 @@
 
 */
 
+@import url('https://fonts.googleapis.com/css?family=Play');
+
+
 /* Fonts */
 @font-face{
 	font-family: 'Electrolize';
-	src: url('../fonts/Electrolize-Regular.ttf') format('truetype');
+	src: url('../fonts/electrolize/Electrolize-Regular.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
     font-family: 'raleway-regular';
-    src: url('../fonts/raleway-regular.eot');
-    src: url('../fonts/raleway-regular.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/raleway-regular.woff') format('woff'),
-         url('../fonts/raleway-regular.ttf') format('truetype'),
-         url('../fonts/raleway-regular.svg#ralewayregular') format('svg');
+    src: url('../fonts/raleway/raleway-regular.eot');
+    src: url('../fonts/raleway/raleway-regular.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/raleway/raleway-regular.woff') format('woff'),
+         url('../fonts/raleway/raleway-regular.ttf') format('truetype'),
+         url('../fonts/raleway/raleway-regular.svg#ralewayregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
+
+
 
 /*  General CSS  */
 *{
@@ -39,7 +44,9 @@
 	padding: 0%;
 	color:black;
 	text-decoration:none;
-	font-family: 'Electrolize';
+	/*font-family: 'Electrolize';*/
+	font-family: "Play";
+
 	/*text-align: center;*/
 }
 
@@ -222,6 +229,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00b7ea', end
 	height: 100%;
 	opacity: 0;
 	/*display: none;*/
+}
+.background_main{
+	position: absolute;
+	width: 83%;
+	left: 17%;
+	opacity: 0;
 }
 
 .slideShowDown, .slideShowUp{
@@ -474,18 +487,24 @@ ul.social li a:hover{
 
 /*Portafolio ----------------------------------------------------------*/
 .portfolio{
-	position: absolute;	
-	width: 100%;
+	position: absolute;
+	left: 17%;
+	width: 83%;
 	height: 100%;
 	display: none;	
+
+	/*background-color: green;*/
 }
 
 .portfolio-content{
-		position: relative;
-		margin-top: 3%;
-		margin-left: 23%;
-		width: 70%;
-		height: 100%;
+	position: relative;
+	margin-top: 3%;
+	margin-left: 5%;
+	width: 90%;
+	/*width: auto;*/
+	height: 100%;
+
+	/*background-color: red;*/
 }
 
 .nav{
@@ -530,23 +549,22 @@ ul.social li a:hover{
 	/*color: white;*/
 }
 .columns-content{
-	/*position: relative;*/
-	width: 100%;
-	/*height: 100%;*/
-	/*background-color: blue;*/
-	margin-top: 3%;
-	margin-bottom: 5%;
+	padding-top: 3%;
+	text-align: center;
 
+	/*background-color: blue;*/
 }
 .columns-four{
 	display: inline-block;
 	width: 220px;
 	/*height: 180px;*/
-	margin: 0 6px 2% 6px;
+	margin: 0% 6px 2% 6px;
 	/*height: auto;*/
 	background-color: white;
 	cursor:pointer;
 	cursor:hand;
+
+
 }
 .thumb-column-background{
 	background-color: black;
@@ -557,7 +575,7 @@ ul.social li a:hover{
 	width: 220px;
 	height: 180px;
 	/*border: solid white 1px;*/
-	opacity: 0.4;
+	opacity: 0.6;
 }
 .column-description{
 	/*margin-top: 9px;*/
@@ -950,6 +968,8 @@ ul.social li a:hover{
 	}
 	
 	.portfolio{
+		left: 0%;
+		width: 100%;	
 	}
 	.portfolio-content{
 		position: relative;
