--- a/css/style.css
+++ b/css/style.css
@@ -262,8 +262,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00b7ea', end
 /*  Header */
 #header_vertical{
 	position: fixed;
-	background-color: black;
-	background: url("../img/background_header.png") repeat;
+	background-color: rgba(0,0,0,0.7);
 	top: 0%;
 	left: -20%;
 	width: 17%;
