--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,11 @@
 
 */
 
-@import url('https://fonts.googleapis.com/css?family=Play');
 
 
 /* Fonts */
+@import url('https://fonts.googleapis.com/css?family=Play');
+
 @font-face{
 	font-family: 'Electrolize';
 	src: url('../fonts/electrolize/Electrolize-Regular.ttf') format('truetype');
@@ -256,7 +257,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00b7ea', end
 /*  Header */
 #header_vertical{
 	position: fixed;
-	background-color: rgba(0,0,0,0.7);
+	background-color: rgba(20,20,20,0.8);
 	top: 0%;
 	left: -20%;
 	width: 17%;
@@ -430,7 +431,7 @@ ul.social li a:hover{
 	left: 17.7%;
 	width: 42.5%;
 	height: 100%;
-	background-color: white;
+	background-color: #FEFEFE;
 	opacity: 0;
 	display: none;
 	z-index: 2;
@@ -464,6 +465,7 @@ ul.social li a:hover{
 	/*font-family: Verdana;*/
 	/*color: #363232;*/
 	/*color: black;*/
+	color: #111111;
 	
 }
 .content-text h3{
@@ -797,27 +799,48 @@ ul.social li a:hover{
 .contact{
 	border-radius: 6px;
     border: 1px solid #CED5D7;
-   	background:transparent url('../img/background_header.png') repeat top left;
+   	/*background:transparent url('../img/background_header.png') repeat top left;*/
+   	background-color: white;
     box-shadow: -1px 1px 1px #B5C1C5, 0 0 0 2px #EEF5F7 inset;
     height: 100%;
 }
 .contact-content{
-	margin: 8%;
+	/*margin: 8%;*/
+	margin: 0% 10% 10% 10%;
 }
 #contact h2{
 	font-size: 1.2em;
 	text-align: center;
-	margin-top: 5%;
-	margin-bottom: 5%;
-	color: white;
+	margin-top: 16%;
+	/*margin-bottom: 8%;*/
+	/*color: white;*/
 }
 #contact label{
     display: block;
-    color: white;
+    /*color: white;*/
 }
-#contact div{
-    margin-bottom: 4%;
+#contact p{
+	display: block;
+	font-family: raleway-regular;
+	margin-bottom: 5%;
+	margin-top: 5%;
+	font-size: 0.9em;
+    /*color: #FFFFFF;*/
 }
+#contact .mail{
+	margin-left: 2%;
+}
+
+.contact-networks{
+	margin-left: 8%;
+}
+#contact a:hover{
+	color: black;
+}
+#contact a:hover span{
+	color: black;
+}
+
 #contact input[type='text'], #contact input[type='email'], #contact textarea{
     padding: 6px 1px;
     width: 90%;
@@ -947,7 +970,8 @@ ul.social li a:hover{
 		position: fixed;
 		top: 100%;
 		margin-top: -55px;	
-		background: url("../img/background_header.png") repeat;
+		background-color: rgba(30,30,30,1);
+		/*background: url("../img/background_header.png") repeat;*/
 		width: 100%;
 		padding-left: 8%;
 		padding-top: 1%;
@@ -955,7 +979,9 @@ ul.social li a:hover{
 		/*padding-right: 7%;*/
 		/*margin: 0%;*/
 	}
-	
+	ul.social li a{
+    	background: url('../img/sm_hover_new.png') no-repeat;	
+	}
 
 	.about{
 		margin: 0;
