--- a/css/wordmarks.css
+++ b/css/wordmarks.css
@@ -1,8 +1,19 @@
 
 @font-face {
   font-family: 'socialwordmarks';
-   src: url("../fonts/wordmarks.ttf");
+   /*src: url("../fonts/wordmarks.ttf");*/
   /*src: url("../fonts/wordmarks.ttf?xqxft6") format("truetype") */
+
+
+
+  /*src: url("wordmarks.eot") */
+
+  src: url('../fonts/wordmarks/wordmarks.eot?39030444');
+  src: url('../fonts/wordmarks/wordmarks.eot?39030444#iefix') format('embedded-opentype'),
+       url('../fonts/wordmarks/wordmarks.woff2?39030444') format('woff2'),
+       url('../fonts/wordmarks/wordmarks.woff?39030444') format('woff'),
+       url('../fonts/wordmarks/wordmarks.ttf?39030444') format('truetype'),
+       url('../fonts/wordmarks/wordmarks.svg?39030444#fontello') format('svg');
  /* font-weight: normal;
   font-style: normal;*/
 }
