--- a/css/style.css
+++ b/css/style.css
@@ -45,8 +45,9 @@
 	padding: 0%;
 	color:black;
 	text-decoration:none;
-	/*font-family: 'Electrolize';*/
-	font-family: "Play";
+	/*font-family: 'raleway-regular', 'arial';*/
+	/*font-family: "Play";*/
+	font-family: 'Helvetica','raleway-regular';
 
 	/*text-align: center;*/
 }
@@ -276,6 +277,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00b7ea', end
 	display:block;
 }
 .logo h1{
+	font-family: 'play';
 	font-size: 1em;
 	color: white;
 }
@@ -284,8 +286,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00b7ea', end
 	display: block;
 }
 .logo span{
+	font-family: 'play';
 	color: white;
-	font-size: 0.56em;
+	font-size: 0.65em;
 	display:block;	
 }
 .avatar{
@@ -317,7 +320,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00b7ea', end
 .nav_vertical ul li a{
 	position: relative;
 	color: white; 	
-    font-family: "raleway-regular", arial;
+    font-family: "raleway-regular", 'Helvetica';
     font-size: 14px;
     text-decoration: none;
     /*text-transform: uppercase;*/
@@ -380,8 +383,8 @@ ul.social li a:hover{
         background-position: -31px 0;
     }
 
-    ul.social li a.behance,
-    ul.social li a.behance:hover{
+    ul.social li a.linkedin,
+    ul.social li a.linkedin:hover{
         background-position: -62px 0;
     }
 
@@ -459,13 +462,9 @@ ul.social li a:hover{
 	margin-top: 3%;
 	font-size: 15px;
 	/*font-family: 'raleway-regular';*/
-	font-family: arial;
-	/*font-family: 'Electrolize';*/
-	/*font-family: Helvetica;*/
-	/*font-family: Verdana;*/
-	/*color: #363232;*/
-	/*color: black;*/
-	color: #111111;
+	/*font-family: play;*/
+	/*font-family: Helv	etica;*/
+	/*color: #111111;*/
 	
 }
 .content-text h3{
@@ -582,7 +581,7 @@ ul.social li a:hover{
 	width: 220px;
 	height: 180px;
 	/*border: solid white 1px;*/
-	opacity: 0.6;
+	opacity: 0.7;
 	/*transform: scale(1), ease;*/
 	transition: all .5s ease;
 
@@ -590,7 +589,7 @@ ul.social li a:hover{
 }
 .thumb-column:hover{
 	transition: all .5s ease;
-	transform: scale(1.2);
+	transform: scale(1.12);
 	opacity: 1;
 }
 
@@ -601,7 +600,7 @@ ul.social li a:hover{
 	text-align: center;
 	height: 50px;
 	font-size: 1em;
-	color: #3f3f3f;
+	/*color: #6f6f6f;*/
 
 	/*background-color: white;*/
 }
@@ -618,7 +617,8 @@ ul.social li a:hover{
 	color: white;
 }
 .thumb_section{
-	color: #909090;
+	color: #505050;
+
 	font-size: 0.9em;
 	font-style: italic;
 
@@ -720,19 +720,25 @@ ul.social li a:hover{
 	width: 28%;
 	height: 100%;
 	z-index: 6;
+		color: #3f3f3f;
+
 }
 .app-info{
 	margin: 8%;
 	display: none;
 }
 .app-title{
-	color: #3f3f3f;
+	/*color: #3f3f3f;*/
 }
 .app-info .content-text p{
-	color: #3f3f3f;
+	/*color: #3f3f3f;*/
 	/*font: 12px */
 	font-family: Helvetica, Verdana, sans-serif;
 
+}
+.app-info .context-text p ul > li{
+/*.content-text p ul{*/
+	color: #3f3f3f;
 }
 .app-bar-links{
 	margin: 5%;
@@ -821,18 +827,19 @@ ul.social li a:hover{
 }
 #contact p{
 	display: block;
-	font-family: raleway-regular;
+	/*font-family: raleway-regular;*/
 	margin-bottom: 5%;
 	margin-top: 5%;
 	font-size: 0.9em;
     /*color: #FFFFFF;*/
 }
-#contact .mail{
+.mail{
 	margin-left: 2%;
 }
 
 .contact-networks{
 	margin-left: 8%;
+	margin-bottom: 10%;
 }
 #contact a:hover{
 	color: black;
