--- a/css/style.css
+++ b/css/style.css
@@ -631,7 +631,8 @@ ul.social li a:hover{
 	color: white;
 }
 .thumb_title{
-	color: #575757;
+	/*color: #575757;*/
+	color: #00BFFF;
 	text-transform: uppercase;
 	font-size: 0.9em;
 	margin-bottom: 1%;
